tests/typing/errors/arith_linear/test.smt2
(set-logic QF_LIA)
(declare-fun a () Int)
(declare-fun b () Int)
(assert (= 0 (* a b)))
(check-sat)
